# robotraconteur_microphone_driver

./: README.md  pyproject.toml  requirements.txt  run_driver.bat  setup.py
examples/: microphone_record_client.py  microphone_stream_listen_client.py
src/robotraconteur_microphone_driver/: __main__.py  experimental.audio.microphone.robdef  microphone_driver.py
