[project]

name= "robotraconteur-microphone-driver"
version = "0.0.1"
description = "Robot Raconteur driver for standard microphones"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]

dependencies = [
    'RobotRaconteur',
    'RobotRaconteurCompanion',
    'numpy',
    'sounddevice'
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[project.scripts]
robotraconteur-microphone-driver = "robotraconteur_microphone_driver.microphone_driver:main"
