[project]

name= "robotraconteur-microphone-driver"
version = "0.1.0"
description = "Robot Raconteur driver for standard microphones"
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]

dependencies = [
    'RobotRaconteur',
    'RobotRaconteurCompanion',
    'numpy',
    'sounddevice',
    'drekar-launch-process'
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/robotraconteur-contrib/robotraconteur_microphone_driver"
repository = "https://github.com/robotraconteur-contrib/robotraconteur_microphone_driver"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[project.scripts]
robotraconteur-microphone-driver = "robotraconteur_microphone_driver.microphone_driver:main"

[tool.setuptools.package-data]
"robotraconteur_microphone_driver" = ["*.robdef"]
